<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="win.kymco.bluetooth.MainActivity">

    <TextView
        android:id="@+id/tv_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bt"
        android:textStyle="bold"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_bt_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btClient"
        android:text="@string/bt_client"
        app:layout_constraintTop_toBottomOf="@+id/tv_bt"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_bt_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btServer"
        android:text="@string/bt_server"
        app:layout_constraintTop_toBottomOf="@+id/btn_bt_client"
        android:visibility="gone"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginTop="64dp"
        android:background="#000"
        app:layout_constraintTop_toBottomOf="@+id/btn_bt_server"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ble"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_ble_client"
        android:layout_width="307dp"
        android:layout_height="115dp"
        android:background="@drawable/button"
        android:onClick="bleClient"
        android:text="@string/ble_client"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ble_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="bleServer"
        android:text="@string/ble_server"
        app:layout_constraintTop_toBottomOf="@+id/btn_ble_client"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>